tests/ui/binop/binop-mul-bool.rs
// error-pattern:cannot multiply `bool` by `bool`

fn main() { let x = true * false; }
